Update 1. Leaner Regression.md

--- a/1. Linear Regression/1. Leaner Regression.md
+++ b/1. Linear Regression/1. Leaner Regression.md
@@ -1,9 +1,6 @@
 # 线性回归推导
 
-目标：
-$$
-P_{\max} ;;\Rightarrow;; L(\theta) \text{ 取极大}
-$$
+目标：概率最大
 
 即：最小化 $J(\theta)$，最大化 $L(\theta)$。
 
@@ -99,21 +96,10 @@ $$
 
 ---
 
-## 6. 说明与注意
+## 6. 缺陷
+* $X^T X$ 可能**不可逆**
+* 没有“学习”内容，仅是套公式
 
-1. $X^T X$ 是对称矩阵。
-
-   * 求导时用到：
-     $$
-     \frac{\partial}{\partial \theta} (\theta^T X^T X \theta) = 2X^T X \theta
-     $$
-
-2. 若 $X^T X$ **不可逆**，则正规方程无解，需要使用：
-
-   * 矩阵伪逆；
-   * 或加入正则化项。
-
-3. 学习时：实际上没有学习过程，直接是公式解。
 
 ---
 
