Update 1. Leaner Regression.md

--- a/1. Linear Regression/1. Leaner Regression.md
+++ b/1. Linear Regression/1. Leaner Regression.md
@@ -1,4 +1,7 @@
 # 线性回归推导
+[线性回归推导手写稿](https://github.com/new-tonAA/MachineLearningNotes/blob/main/1.%20Linear%20Regression/%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92%E8%AF%A6%E7%BB%86%E6%8E%A8%E5%AF%BC.jpg)
+
+
 
 目标：概率最大
 
